# wmctl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  rustfmt.toml
.githooks/: commit-msg  pre-commit  utils
config/archlinux/: PKGBUILD
config/package/: PKGBUILD
examples/: info.rs  position.rs  shape.rs  static.rs
libwmctl/: Cargo.toml  README.md
libwmctl/examples/: info.rs  list.rs  place.rs  position.rs  properties.rs  shape.rs  static.rs  win_info.rs  winmgr_info.rs
libwmctl/src/: atoms.rs  display.rs  error.rs  lib.rs  model.rs  position.rs  shape.rs  win.rs  window.rs  winmgr.rs  wmctl.rs
libwmctl/src/model/: class.rs  display.rs  gravity.rs  info.rs  kind.rs  map_state.rs  mod.rs  position.rs  property.rs  shape.rs  state.rs
pkg/: wmctl.nix
src/: get.rs  info.rs  list.rs  logger.rs  main.rs  place.rs  utils.rs
