[package]
name = "wmctl"
version = "0.0.18"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust X11 automation"
repository = "https://github.com/phR0ze/wmctl"
exclude = [
  "docs",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Spliting the library from the binary with workspaces allows for a separation of
# dependencies so the binary dependencies aren't required for the library.
# path = <dependency> entries in dependencies are automatically included
[workspace]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization
debug = true    # Provide debug symbols for Witcher

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
gory = "0.1"
tracing = "0.1"
witcher = "0.1.19"
tracing-subscriber = "0.3"
libwmctl = { path = "libwmctl" }
clap = { version = "2.33", default-features = false, features = ["suggestions"] }

# Tests, examples and build.rs are built with these dependencies
[build-dependencies]
chrono = "0.4"