[package]
name = "libwmctl"
version = "0.0.16"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust X11 automation"
repository = "https://github.com/phR0ze/wmctl"

[dependencies]
tracing = "0.1"

# Requires `allow-unsafe-code` to enable XCB support for EWMH
[dependencies.x11rb]
version = "0.9.0"
#features = ["allow-unsafe-code"]