[package]
name = "libwmctl"
version = "0.0.43"
edition = "2021"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust X11 automation"
repository = "https://github.com/phR0ze/wmctl/tree/main/libwmctl"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

[dependencies]
tracing = "0.1"
x11rb = "0.9.0"
